src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

.pd-button{
  /* color: rgba(12, 10, 0, 0.80); */
  align-self: stretch;
  font-family: Montserrat;
  font-size: 16px;
  font-style: normal;
  /* font-weight: 600; */
  line-height: 24px; /* 150% */
  /* letter-spacing: 1.6px; */
  /* text-transform: uppercase; */
}

.pd-h1{
  /* color: var(--BLACK, #0C0A00); */
  font-family: Prompt;
  font-size: 64px;
  font-style: normal;
  font-weight: 800;
  line-height: 125%; /* 80px */
  letter-spacing: -1.28px;
  align-self: stretch;
}

.pd-h2{
  /* color: #000; */
  font-family: Prompt;
  font-size: 48px;
  font-style: normal;
  font-weight: 800;
  line-height: 125%; /* 60px */
  letter-spacing: -0.96px;
}

.pd-h3{
  /* color: #2C2C2C; */
  font-family: Montserrat;
  font-size: 24px;
  font-style: normal;
  font-weight: 800;
  line-height: 130%;
}

.pd-p{
  /* color: #000; */
  font-family: Montserrat;
  font-size: 16px;
  font-style: normal;
  /* font-weight: 400; */
  line-height: 24px;
}

.pd-p-18{
  /* color: #000; */
  font-family: Montserrat;
  font-size: 18px;
  font-style: normal;
  /* font-weight: 400; */
  line-height: 24px;
}

.hero-badge-text{
  font-size: 52px;
}

.pd-off-canvas{
  transition: all 5s;
}

button:hover{
  opacity: .6;
}
footer li a{
  transition: all .4s;
}
footer li a:hover{
  color: #DF1406;
  margin-left: 4px;
}
/* sm: '480px',
      md: '768px',
      lg: '976px',
      xl: '1440px', */
@media only screen and (min-width: 976px) and (max-width: 1140px){ 
  .pd-h1{
    font-size: 60px;
  }
  .pd-h2{
    font-size: 44px;
  }
  .pd-h3{
    font-size: 22px;
  }
  .pd-p{
    font-size: 16px;
  }
  .pd-p-18{
    font-size: 18px;
  }
  .hero-badge-text{
    font-size: 48px;
  }
}
@media only screen and (min-width: 768px) and (max-width: 975px){ 
  .pd-h1{
    font-size: 56px;
  }
  .pd-h2{
    font-size: 41px;
  }
  .pd-h3{
    font-size: 21px;
  }
  .pd-p{
    font-size: 15px;
  }
  .pd-p-18{
    font-size: 17px;
  }
  .hero-badge-text{
    font-size: 45px;
  }
}
@media only screen and (min-width: 481px) and (max-width: 767px){ 
  .pd-h1{
    font-size: 52px;
  }
  .pd-h2{
    font-size: 38px;
  }
  .pd-h3{
    font-size: 20px;
  }
  .pd-p{
    font-size: 14px;
  }
  .pd-p-18{
    font-size: 16px;
  }
  .hero-badge-text{
    font-size: 41px;
  }
}

@media only screen and (max-width: 480px){ 
  .pd-h1{
    font-size: 42px;
  }
  .pd-h2{
    font-size: 36px;
  }
  .pd-h3{
    font-size: 20px;
  }
  .pd-p{
    font-size: 14px;
  }
  .pd-p-18{
    font-size: 16px;
  }
  .hero-badge-text{
    font-size: 38px;
  }
}

@media only screen and (min-width: 768px) and (max-width: 845px){
  .flex-row-at-half-md{
    flex-direction: column !important;
  }
  .with-at-half-md{
    width: 100% !important;
  }
  .break-at-half-md{
    width: 100% !important;
  }
}

@media only screen and (min-width: 976px) and (max-width: 1100px){
  .break-at-half-lg{
    flex-wrap: wrap;
  }
}

@media only screen and (min-width: 992px){
    
  ::-webkit-scrollbar {
      width: 5px;
  }
  
  /* Track */
  ::-webkit-scrollbar-track {
      background: rgba(17, 24, 39, 0.50);
  }
  
  /* Handle */
  ::-webkit-scrollbar-thumb {
      background: #1f2937;
      border-radius: 3px;
  }
  
  /* Handle on hover */
  ::-webkit-scrollbar-thumb:hover {
      background: #374151;
  }
  
  /* Target the scrollbar track */
  /* ::-webkit-scrollbar-track { */
      /* Customize background color */
      /* background-color: #f1f1f1; */
  /* } */
  
  /* Target the scrollbar thumb */
  /* ::-webkit-scrollbar-thumb { */
      /* Customize background color */
      /* background-color: #888; */
      /* Adjust size (optional) */
      /* height: 30px;
      width: 30px;
  } */
  
  }

